--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,6 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+sayhello/source/openie-model.2020.03.26.tar.gz
+sayhello/source/decomposable-attention-elmo-2020.04.09.tar.gz
+sayhello/source/ner-elmo.2021-02-12.tar.gz
